// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HierarchicalLocationsView /> displays a single location when complete 1`] = `
<DocumentFragment>
  <div>
    <div
      class="referencesContainer"
      data-testid="hierarchical-locations-view"
    >
      <div
        class="fileLocations fileLocations"
      >
        <div>
          <div
            class="test-search-result resultContainer resultContainer"
            data-collapsible="false"
            data-result-type="content"
            data-testid="result-container"
          >
            <article
              aria-labelledby="result-container-0"
            >
              <div
                class="header"
                id="result-container-0"
              >
                <svg
                  aria-label="github.com"
                  class="mdi-icon iconInline text-muted flex-shrink-0 mr-1"
                  data-state="closed"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <div
                  class="headerTitle test-search-result-label"
                  data-testid="result-container-header"
                >
                  <div
                    class="titleInner mutedRepoFileLink"
                  >
                    <a
                      class="anchorLink"
                      href="/github.com/foo/bar"
                    >
                      foo/bar
                    </a>
                    <span
                      aria-hidden="true"
                    >
                       ›
                    </span>
                     
                    <a
                      class="anchorLink"
                      href="/github.com/foo/bar/-/blob/?subtree=true"
                    >
                      <strong />
                    </a>
                  </div>
                  <span
                    class="ml-2 headerDescription"
                  />
                </div>
              </div>
              <div
                class="collapsibleResults"
              >
                <div>
                  <div
                    class="fileMatchChildren"
                    data-testid="file-match-children"
                  >
                    <div>
                      <div
                        class="test-file-match-children-item-wrapper itemCodeWrapper"
                      >
                        <div
                          class="test-file-match-children-item item itemClickable"
                          data-href="/github.com/foo/bar/-/blob/?L2:1&subtree=true"
                          data-testid="file-match-children-item"
                          role="link"
                          tabindex="0"
                        >
                          <code
                            class="code codeExcerpt"
                            data-testid="code-excerpt"
                          >
                            <table>
                              <tbody>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="1"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="2"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="3"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </code>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </article>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> displays multiple locations grouped by file 1`] = `
<DocumentFragment>
  <div>
    <div
      class="referencesContainer"
      data-testid="hierarchical-locations-view"
    >
      <div
        aria-label="Hierarchical locations sidebar"
        class="panel panelLeft panelRelative"
        role="region"
        style="width: 200px;"
      >
        <div
          class="handle handleLeft"
          role="presentation"
        />
        <div
          class="groupList"
          data-testid="hierarchical-locations-view-list"
        >
          <button
            aria-label="File path file1.txt"
            class="list-group-item list-group-item-action locationButton active"
            data-testid="hierarchical-locations-view-button"
            type="button"
          >
            <span
              class="locationName"
              title="file1.txt"
            >
              <span
                class="locationNameText"
              >
                <span
                  class=""
                >
                  <span>
                    <span>
                      file1.txt
                    </span>
                  </span>
                </span>
              </span>
            </span>
            <span
              class="locationBadge ml-1"
            >
              2
            </span>
          </button>
          <button
            aria-label="File path file2.txt"
            class="list-group-item list-group-item-action locationButton"
            data-testid="hierarchical-locations-view-button"
            type="button"
          >
            <span
              class="locationName"
              title="file2.txt"
            >
              <span
                class="locationNameText"
              >
                <span
                  class=""
                >
                  <span>
                    <span>
                      file2.txt
                    </span>
                  </span>
                </span>
              </span>
            </span>
            <span
              class="locationBadge ml-1"
            >
              3
            </span>
          </button>
        </div>
      </div>
      <div
        class="fileLocations fileLocations"
      >
        <div>
          <div
            class="test-search-result resultContainer resultContainer"
            data-collapsible="false"
            data-result-type="content"
            data-testid="result-container"
          >
            <article
              aria-labelledby="result-container-0"
            >
              <div
                class="header"
                id="result-container-0"
              >
                <svg
                  aria-label="github.com"
                  class="mdi-icon iconInline text-muted flex-shrink-0 mr-1"
                  data-state="closed"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <div
                  class="headerTitle test-search-result-label"
                  data-testid="result-container-header"
                >
                  <div
                    class="titleInner mutedRepoFileLink"
                  >
                    <a
                      class="anchorLink"
                      href="/github.com/foo/bar"
                    >
                      foo/bar
                    </a>
                    <span
                      aria-hidden="true"
                    >
                       ›
                    </span>
                     
                    <a
                      class="anchorLink"
                      href="/github.com/foo/bar/-/blob/file1.txt?subtree=true"
                    >
                      <strong>
                        file1.txt
                      </strong>
                    </a>
                  </div>
                  <span
                    class="ml-2 headerDescription"
                  />
                </div>
              </div>
              <div
                class="collapsibleResults"
              >
                <div>
                  <div
                    class="fileMatchChildren"
                    data-testid="file-match-children"
                  >
                    <div>
                      <div
                        class="test-file-match-children-item-wrapper itemCodeWrapper"
                      >
                        <div
                          class="test-file-match-children-item item itemClickable"
                          data-href="/github.com/foo/bar/-/blob/file1.txt?L2:1&subtree=true"
                          data-testid="file-match-children-item"
                          role="link"
                          tabindex="0"
                        >
                          <code
                            class="code codeExcerpt"
                            data-testid="code-excerpt"
                          >
                            <table>
                              <tbody>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="1"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="2"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="3"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="4"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="5"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </code>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </article>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> displays partial locations before complete 1`] = `
<DocumentFragment>
  <div>
    <div
      class="referencesContainer"
      data-testid="hierarchical-locations-view"
    >
      <div
        class="fileLocations fileLocations"
      >
        <div>
          <div
            class="test-search-result resultContainer resultContainer"
            data-collapsible="false"
            data-result-type="content"
            data-testid="result-container"
          >
            <article
              aria-labelledby="result-container-0"
            >
              <div
                class="header"
                id="result-container-0"
              >
                <svg
                  aria-label="github.com"
                  class="mdi-icon iconInline text-muted flex-shrink-0 mr-1"
                  data-state="closed"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <div
                  class="headerTitle test-search-result-label"
                  data-testid="result-container-header"
                >
                  <div
                    class="titleInner mutedRepoFileLink"
                  >
                    <a
                      class="anchorLink"
                      href="/github.com/foo/bar"
                    >
                      foo/bar
                    </a>
                    <span
                      aria-hidden="true"
                    >
                       ›
                    </span>
                     
                    <a
                      class="anchorLink"
                      href="/github.com/foo/bar/-/blob/?subtree=true"
                    >
                      <strong />
                    </a>
                  </div>
                  <span
                    class="ml-2 headerDescription"
                  />
                </div>
              </div>
              <div
                class="collapsibleResults"
              >
                <div>
                  <div
                    class="fileMatchChildren"
                    data-testid="file-match-children"
                  >
                    <div>
                      <div
                        class="test-file-match-children-item-wrapper itemCodeWrapper"
                      >
                        <div
                          class="test-file-match-children-item item itemClickable"
                          data-href="/github.com/foo/bar/-/blob/?L2:1&subtree=true"
                          data-testid="file-match-children-item"
                          role="link"
                          tabindex="0"
                        >
                          <code
                            class="code codeExcerpt"
                            data-testid="code-excerpt"
                          >
                            <table>
                              <tbody>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="1"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="2"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                                <tr>
                                  <td
                                    class="line"
                                    data-line="3"
                                  />
                                  <td
                                    class="code"
                                  >
                                     
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </code>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </article>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> shows a spinner before any locations emissions 1`] = `
<DocumentFragment>
  <div
    aria-label="Loading"
    aria-live="polite"
    class="mdi-icon iconInline loadingSpinner m-1 test-loading-spinner"
    role="img"
  />
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> shows a spinner if locations emits empty and is not complete 1`] = `
<DocumentFragment>
  <div
    aria-label="Loading"
    aria-live="polite"
    class="mdi-icon iconInline loadingSpinner m-1 test-loading-spinner"
    role="img"
  />
</DocumentFragment>
`;
